# pltr-cli

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT_PLAN.md  README.md  children.csv  folder_info.json  folders.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml  test-publish.yml
claude_skill/: SKILL.md
claude_skill/reference/: admin-commands.md  connectivity-commands.md  dataset-commands.md  filesystem-commands.md  mediasets-commands.md  orchestration-commands.md
claude_skill/workflows/: permission-management.md
docs/: pagination.md
docs/examples/: gallery.md
docs/migration/: v2-pagination.md
docs/user-guide/: claude-skill.md  commands.md  troubleshooting.md  workflows.md
scripts/: release.py
src/pltr/: __main__.py  cli.py
tests/: __init__.py  conftest.py
tests/integration/: test_auth_flow.py  test_cli_integration.py  test_data_workflows.py
tests/test_auth/: test_base.py  test_manager.py  test_oauth.py  test_storage.py  test_token.py
tests/test_commands/: test_admin.py  test_aip_agents.py  test_alias.py  test_audit.py  test_completion.py  test_connectivity.py  test_data_health.py  test_dataset.py  test_folder.py  test_functions.py  test_language_models.py  test_mediasets.py  test_models.py  test_ontology.py  test_orchestration.py  test_shell.py  test_sql.py  test_streams.py  test_third_party_applications.py  test_verify_simple.py  test_widgets.py
tests/test_config/: test_aliases.py  test_profiles.py  test_settings.py
tests/test_services/: test_admin.py  test_aip_agents.py  test_base.py  test_connectivity.py  (+17 more)
(+68 files in other folders)
